[gd_scene load_steps=14 format=3 uid="uid://bc72r6ld81nx3"]

[ext_resource type="Script" path="res://level_manager.gd" id="1_bl0hj"]
[ext_resource type="PackedScene" uid="uid://bwiewg0a0gyc2" path="res://scenes/pop-up.tscn" id="4_usvhr"]
[ext_resource type="Texture2D" uid="uid://cjc3xapuabnkj" path="res://assets/BG/e9f7d9dd-80be-4055-aa3f-6540759b0fee.png" id="5_xu6tr"]
[ext_resource type="Script" path="res://scenes/textfile.gd" id="6_jkuhc"]
[ext_resource type="PackedScene" uid="uid://cmhkx1rgnsuj0" path="res://scenes/level_3.tscn" id="9_1eqvl"]
[ext_resource type="PackedScene" uid="uid://b0wr8368yf0tb" path="res://scenes/level_2.tscn" id="9_qo6ds"]
[ext_resource type="Texture2D" uid="uid://cnoqqpia7fvo5" path="res://assets/Sprites/Desktop icons/spikes.png" id="9_r6aqw"]
[ext_resource type="Texture2D" uid="uid://dxyf8lr6ordxe" path="res://assets/Sprites/Desktop icons/textfile.png" id="10_hagex"]
[ext_resource type="PackedScene" uid="uid://10bjel6qpxqq" path="res://scenes/holes.tscn" id="11_ammbs"]
[ext_resource type="PackedScene" uid="uid://bok0swl3ocanx" path="res://scenes/Platform.tscn" id="11_dv7ri"]
[ext_resource type="PackedScene" uid="uid://dlbegqwxh73w5" path="res://scenes/assets_folder.tscn" id="11_n11ij"]
[ext_resource type="PackedScene" uid="uid://dywxupgtd574c" path="res://scenes/level_1.tscn" id="12_tsd6f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5qme"]
size = Vector2(874.5, 682.5)

[node name="Game" type="Node2D"]
scale = Vector2(2, 2)

[node name="level_manager" type="Node" parent="."]
script = ExtResource("1_bl0hj")

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="BG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-36.5, -101.5)
texture = ExtResource("5_xu6tr")

[node name="pop-up close" parent="." instance=ExtResource("4_usvhr")]
visible = false
z_index = 1
position = Vector2(0, -2.5)

[node name="Spikes" type="Sprite2D" parent="."]
visible = false
position = Vector2(-95.5, -275)
texture = ExtResource("9_r6aqw")

[node name="Textfile" type="Sprite2D" parent="."]
position = Vector2(-371, -81.5)
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_hagex")
script = ExtResource("6_jkuhc")

[node name="Platform_png" parent="." instance=ExtResource("11_dv7ri")]
position = Vector2(-161, -291)

[node name="Holes" parent="." instance=ExtResource("11_ammbs")]
z_index = 1
position = Vector2(-274.5, -273.5)

[node name="Screen" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screen"]
position = Vector2(3.25, 6.25)
shape = SubResource("RectangleShape2D_q5qme")

[node name="Assets folder" parent="." instance=ExtResource("11_n11ij")]
position = Vector2(-367, -203)

[node name="level_3" parent="." instance=ExtResource("9_1eqvl")]
position = Vector2(47, -44)

[node name="level_2" parent="." instance=ExtResource("9_qo6ds")]
position = Vector2(47, -44)

[node name="level_1" parent="." instance=ExtResource("12_tsd6f")]
position = Vector2(47, -44)
